# cs224u-final-project

./: Close_Open_Book_Exp_(4).ipynb  Conil - playground.ipynb  Eval_Hallucination_Detection.ipynb  Project_Experiment.ipynb  df_results_halu_check.pkl  jenny_openqa.ipynb  michael_hw_openqa.ipynb  models.py  pyproject.toml
