[tool.poetry]
name = "cs224u-final-project"
version = "0.1.0"
description = ""
authors = ["Michael Hassler"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
scipy = "^1.12.0"
matplotlib = ">=3.7.0"
scikit-learn = ">=1.0.2"
nltk = ">=3.7"
pytest = ">=7.1"
jupyter = ">=1.0.0"
pandas = ">=1.5"
transformers = "==4.37.1"
datasets = "==2.14.6"
spacy = "==3.7.2"
dspy-ai = "^2.1.9"
python-dotenv = "^1.0.1"
wget = "^3.2"
tiktoken = "^0.6.0"
torch = "^2.2.2"
torchvision = "^0.17.2"
torchaudio = "^2.2.2"
tqdm = "^4.66.2"
openai = "^1.17.1"
ragas = "^0.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"